# polymatgen

./: LICENSE  README.md  benchmark.py  ced_benchmark.py  ced_results.txt  finish.py  main.py  overnight2.py  overnight2_results.txt  overnight_a.py  overnight_results.txt  pyproject.toml  test_conformer.py
src/polymatgen/: __init__.py
src/polymatgen/analysis/: chain_stats.py  distribution.py  sequence.py
src/polymatgen/core/: chain.py  monomer.py  polymer.py
src/polymatgen/data/: Cohesive_energy_density_2025_06_23.csv
src/polymatgen/database/: pi1m.py  polyverse.py  reference.py
src/polymatgen/io/: csv_io.py  json_io.py  lammps_io.py
src/polymatgen/ml/: equivariant_predictor.py  features.py  gcn_predictor.py  inverse_design.py  predictors.py
src/polymatgen/properties/: mechanical.py  solubility.py  thermal.py
tests/core/: test_analysis.py  test_database.py  test_equivariant.py  test_gcn.py  test_inverse_design.py  test_io.py  test_ml.py  test_monomer.py  test_pi1m.py  test_polyverse.py  test_properties.py
