[project]
name = "polymatgen"
version = "0.1.0"
description = "A polymer-first materials informatics library — no pymatgen dependency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["polymer", "materials science", "cheminformatics", "informatics", "SMILES"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rdkit>=2026.3.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]

[project.urls]
"Source Code" = "https://github.com/anotherfruit1981-cmyk/polymatgen"
"Bug Tracker" = "https://github.com/anotherfruit1981-cmyk/polymatgen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymatgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
